# project-tessera

./: mcp_server.py  pyproject.toml
src/: cli.py  core.py
